feat(bookmarks): enhance post bookmarking functionality with new DTOs and service methods