@@ -2,17 +2,16 @@ package org.example.blogbackend.user.controller;
 
 import lombok.RequiredArgsConstructor;
 import org.example.blogbackend.common.security.BlogUserDetails;
-import org.example.blogbackend.post.model.dto.response.PostResponse;
-import org.example.blogbackend.post.model.mapper.PostMapper;
+import org.example.blogbackend.post.controller.dto.response.PostResponse;
+import org.example.blogbackend.post.controller.dto.response.PostWithBookmarkResponse;
+import org.example.blogbackend.post.mapper.PostMapper;
 import org.example.blogbackend.user.model.entity.User;
 import org.example.blogbackend.user.service.UserService;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.http.ResponseEntity;
 
 import java.util.List;
-import java.util.UUID;
 import java.util.stream.Collectors;
 
 @RestController
@@ -26,8 +25,8 @@ public class UserController {
     public ResponseEntity<List<PostResponse>> getBookmarkedPosts(@AuthenticationPrincipal BlogUserDetails blogUserDetails) {
         User user = userService.getById(blogUserDetails.getUserId());
         List<PostResponse> bookmarks = user.getBookmarkedPosts().stream()
-                .map(postMapper::toDto)
-                .collect(Collectors.toList());
+                .map(postMapper::toPostResponse)
+                .toList();
         return ResponseEntity.ok(bookmarks);
     }
 }
